--- a/.prettierrc
+++ b/.prettierrc
@@ -4,6 +4,6 @@
   "printWidth": 80,
   "singleQuote": true,
   "trailingComma": "all",
-  "jsxSingleQuote": true,
+  "jsxSingleQuote": false,
   "bracketSpacing": true
 }
