--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
     "reset-css": "^5.0.1",
     "styled-components": "^5.3.6",
     "typescript": "^4.4.2"
@@ -20,6 +21,7 @@
     "@types/react-dom": "^18.0.0",
     "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.3.3",
+    "@types/redux-persist": "^4.3.1",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
