--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "redux-persist": "^6.0.0",
     "reset-css": "^5.0.1",
     "styled-components": "^5.3.6",
-    "typescript": "^4.4.2"
+    "typescript": "^4.4.2",
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "@types/node": "^16.7.13",
