--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@codastic/react-positioning-portal": "codastic/react-positioning-portal",
     "@reduxjs/toolkit": "^1.9.0",
     "polished": "^4.2.2",
     "react": "^18.2.0",
