--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@codastic/react-positioning-portal": "codastic/react-positioning-portal",
     "@reduxjs/toolkit": "^1.9.0",
+    "framer-motion": "^7.6.7",
     "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
