--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "reset-css": "^5.0.1",
     "styled-components": "^5.3.6",
     "typescript": "^4.4.2",
-    "usehooks-ts": "^2.9.1"
+    "usehooks-ts": "^2.9.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "^16.7.13",
