--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
     "redux-persist": "^6.0.0",
     "reset-css": "^5.0.1",
     "styled-components": "^5.3.6",
@@ -28,6 +29,7 @@
     "@types/react-icons": "^3.0.0",
     "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-toastify": "^4.1.0",
     "@types/redux-persist": "^4.3.1",
     "@types/styled-components": "^5.1.26",
     "@types/yup": "^0.32.0",
