--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "framer-motion": "^7.6.7",
     "polished": "^4.2.2",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.4",
     "react-icons": "^4.6.0",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "^18.0.0",
     "@types/react-icons": "^3.0.0",
     "@types/react-redux": "^7.1.24",
