--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "styled-components": "^5.3.6",
     "typescript": "^4.4.2",
     "usehooks-ts": "^2.9.1",
+    "uuid": "^9.0.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -34,6 +35,7 @@
     "@types/react-toastify": "^4.1.0",
     "@types/redux-persist": "^4.3.1",
     "@types/styled-components": "^5.1.26",
+    "@types/uuid": "^8.3.4",
     "@types/yup": "^0.32.0",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
