--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@codastic/react-positioning-portal": "codastic/react-positioning-portal",
     "@reduxjs/toolkit": "^1.9.0",
+    "@supabase/supabase-js": "^2.1.0",
     "framer-motion": "^7.6.7",
     "polished": "^4.2.2",
     "react": "^18.2.0",
@@ -25,6 +26,7 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/": "supabase/supabase-js",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-beautiful-dnd": "^13.1.2",
