--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@supabase/supabase-js": "^2.1.0",
     "framer-motion": "^7.6.7",
     "mobx": "^6.7.0",
+    "mobx-react": "^7.6.0",
     "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
